--- a/public/rv-repair/index.html
+++ b/public/rv-repair/index.html
@@ -83,7 +83,7 @@ Body Damage From minor bumps to major accidents, our skilled technicians restore
                 <li class="">
                     <a href="/truck-services/">Truck Repair</a>
                 <li class="">
-                    <a href="/gallery/">Gallery</a>
+                    <a href="/insurance-partnership/">Insurance</a>
                 <li class="">
                     <a href="/media-sandblasting/">Sandblasting</a>
                 <li class="">
