--- a/public/testimonial/index.html
+++ b/public/testimonial/index.html
@@ -86,7 +86,7 @@ John Doe is a highly recommended professional with a reputation for exceptional 
                 <li class="">
                     <a href="/truck-services/">Truck Repair</a>
                 <li class="">
-                    <a href="/gallery/">Gallery</a>
+                    <a href="/insurance-partnership/">Insurance</a>
                 <li class="">
                     <a href="/media-sandblasting/">Sandblasting</a>
                 <li class="">
