--- a/public/truck-services/index.html
+++ b/public/truck-services/index.html
@@ -83,7 +83,7 @@ At our facility, we understand the critical importance of minimizing downtime an
                 <li class="">
                     <a href="/truck-services/">Truck Repair</a>
                 <li class="">
-                    <a href="/gallery/">Gallery</a>
+                    <a href="/insurance-partnership/">Insurance</a>
                 <li class="">
                     <a href="/media-sandblasting/">Sandblasting</a>
                 <li class="">
