--- a/public/about-us/index.html
+++ b/public/about-us/index.html
@@ -83,7 +83,7 @@ With that as our focus, we’ve developed reliable systems that help us move eac
                 <li class="">
                     <a href="/truck-services/">Truck Repair</a>
                 <li class="">
-                    <a href="/gallery/">Gallery</a>
+                    <a href="/insurance-partnership/">Insurance</a>
                 <li class="">
                     <a href="/media-sandblasting/">Sandblasting</a>
                 <li class="">
