--- a/public/contact-us/index.html
+++ b/public/contact-us/index.html
@@ -89,7 +89,7 @@ Email">
                 <li class="">
                     <a href="/truck-services/">Truck Repair</a>
                 <li class="">
-                    <a href="/gallery/">Gallery</a>
+                    <a href="/insurance-partnership/">Insurance</a>
                 <li class="">
                     <a href="/media-sandblasting/">Sandblasting</a>
                 <li class="">
