--- a/public/home/index.html
+++ b/public/home/index.html
@@ -83,7 +83,7 @@ RV Repair Truck Repair Car Repair Our state-of-the-art facility is equipped to h
                 <li class="">
                     <a href="/truck-services/">Truck Repair</a>
                 <li class="">
-                    <a href="/gallery/">Gallery</a>
+                    <a href="/insurance-partnership/">Insurance</a>
                 <li class="">
                     <a href="/media-sandblasting/">Sandblasting</a>
                 <li class="">
