--- a/public/sample-page/index.html
+++ b/public/sample-page/index.html
@@ -86,7 +86,7 @@ Truck Repair ](https://cabear.com/truck-services/)">
                 <li class="">
                     <a href="/truck-services/">Truck Repair</a>
                 <li class="">
-                    <a href="/gallery/">Gallery</a>
+                    <a href="/insurance-partnership/">Insurance</a>
                 <li class="">
                     <a href="/media-sandblasting/">Sandblasting</a>
                 <li class="">
