--- a/public/testimonial/index.html
+++ b/public/testimonial/index.html
@@ -33,6 +33,7 @@ John Doe is a highly recommended professional with a reputation for exceptional 
     <link rel="stylesheet" href="/css/swiper-large.css" />
     <link rel="stylesheet" href="/css/logo-flip.css" />
     <link rel="stylesheet" href="/css/site-logo.css" />
+    <link rel="stylesheet" href="/css/insurance.css">
 
     <style>
       nav,
