--- a/public/contact-us/index.html
+++ b/public/contact-us/index.html
@@ -36,6 +36,7 @@ Email">
     <link rel="stylesheet" href="/css/swiper-large.css" />
     <link rel="stylesheet" href="/css/logo-flip.css" />
     <link rel="stylesheet" href="/css/site-logo.css" />
+    <link rel="stylesheet" href="/css/insurance.css">
 
     <style>
       nav,
