--- a/public/insurance-partnership/index.html
+++ b/public/insurance-partnership/index.html
@@ -14,10 +14,7 @@
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Insurance Partnerships">
-  <meta name="twitter:description" content="BEAR is the Optimal Choice for Insurance Claims in Auto Body Repair, and This is Why:
-Quality of Workmanship
-&#43; Quality of Workmanship The BEAR team pays meticulous attention to detail, uses high-quality materials, and adherence to industry standards and manufacturer specifications in every repair job. This ensures that the repairs are not only aesthetically pleasing but also durable and safe.
-With BEAR you can rest assured that speed is not prioritized over thoroughness, which can result in subpar repairs that might not last or meet safety standards. Our skilled technicians carefully restore vehicles to their pre-accident condition, ensuring structural integrity and visual appeal. This includes precise paint matching, proper frame alignment, and using the best materials available​. Training Certifications">
+  <meta name="twitter:description" content="Quality of Workmanship &#43; Quality of Workmanship The **BEAR** team pays meticulous attention to detail, uses high-quality materials, and adherence to industry standards and manufacturer specifications in every repair job. This ensures that the repairs are not only aesthetically pleasing but also durable and safe. With **BEAR** you can rest assured that speed is not prioritized over thoroughness, which can result in subpar repairs that might not last or meet safety standards. Our skilled technicians carefully restore vehicles to their pre-accident condition, ensuring structural integrity and visual appeal. This includes precise paint matching, proper frame alignment, and using the best materials available​. Training Certifications **BEAR** is BAR Licensed and I-CAR (Inter-Industry Conference on Auto Collision Repair) certified, which means their technicians have met rigorous industry standards for skills and knowledge. Additionally, our technicians are trained by PPG, a leading provider of automotive coatings, ensuring precise and durable paint jobs. Furthermore, BEAR is OSHA, EPA and DTSC compliant, reflecting their commitment to maintaining a safe and healthy work environment. These certifications and compliance measures ensure reliable, high-quality repairs, making **BEAR** a trustworthy partner for insurance companies. Warranty on Repairs **Warranty on Workmanship** : this covers any defects in the work performed, such as issues with body panel alignment, paint application, or other repair processes. If any problems arise from the initial repair work, **BEAR** will correct them at no additional cost. **Paint Warranty** : covers issues including peeling, cracking, or fading of the paint to an existing sound surface as long as the vehicle is maintained according to the manufacturer&#39;s recommendations. **Parts Warranty** : OEM and after market parts manufacturer&#39;s warranty. ** Some Exclusions and Conditions may apply Facility and Equipment **BEAR Collision Center** has invested in a well-equipped facility that meets the highest standards of the industry. Our frame machines ensuring precise alignment and structural integrity of vehicles. Our sand blasting booth allows for meticulous surface preparation, enhancing the longevity and quality of repairs. Additionally, our large painting and drying booths are designed to provide a controlled environment for flawless finishes, reducing the risk of contaminants and ensuring a perfect paint job every time. Insurance and Legal Compliance **BEAR** complies to the legal and insurance needs for the state of California, including: workers compensation, Commercial property insurance, Legal Auto Body business license, Occupational Safety and Health Administration (OSHA), Department of Toxic Substance Control (DTSC) and Environmental Protection Agency (EPA) compliant. Estimating Accuracy **BEAR Collision Center** writes accurate estimates for insurance companies by utilizing Mitchell Estimating Software, a leading tool in the industry. This software is designed to create precise estimates quickly and efficiently, integrating features such as VIN scanning, photo integration, and OEM repair procedures. These capabilities reduce estimating errors and streamline the appraisal process, ensuring that estimates are both comprehensive and accurate. Turn Around Time **BEAR** **Collision Center** has a quick turnaround time due to several key factors. Their Clemco sandblasting booth allows for efficient and thorough surface preparation, speeding up the repair process. With over 45 years of industry experience, BEAR&#39;s seasoned team brings expertise and efficiency to every job. The large facility is equipped with state-of-the-art equipment, including advanced paint and drying booths, enabling simultaneous handling of multiple vehicles. Their standardized estimating process ensures accurate and swift damage assessment, reducing delays. Furthermore, BEAR&#39;s strong relationships with local vendors ensure prompt parts supply, and their capability for local sourcing fabrication addresses any part shortages, ensuring repairs are never stalled due to unavailable components. This combination of experience, facilities, equipment, and processes ensures that BEAR Collision Repair can deliver high-quality repairs quickly and efficiently. Use of OEM parts BEAR uses OEM parts when available unless otherwise directed. If the OEM part is not available it uses the highest quality after market parts. **BEAR Collision Center** is a Dometic authorized dealer. Customer Service **At BEAR Collision Center,** we are committed to providing excellent customer service. Our team prioritizes clear communication, ensuring that clients are fully informed at every step of the repair process. Professionalism is at the core of our operations, reflected in our courteous staff, timely updates, and transparent estimates. We are also highly responsive, addressing inquiries and concerns promptly to deliver a seamless experience. By combining these elements, BEAR Collision Center not only meets but exceeds the expectations of both our customers and insurance partners, fostering trust and long-term relationships. Reputation and Reviews **BEAR Collision Center** has earned a excellent reputation in the local community for its excellent service and quality repairs. Customers consistently praise the friendly and professional staff, highlighting their ability to handle even the toughest jobs with efficiency and care. &#34;Outstanding service, very friendly staff and a very tough job done so well. Thank Steve, Patty and Michael . Best RV repair in the world. Thank you. &#34; - Mike Barret on [Birdey](https://reviews.birdeye.com/bear-rv-collision- center-156069132112032?srid=122233715451224506095) &#34;Michael went above and beyond to help me with another small issue that they usually don&#39;t address but since I was having trouble getting appointments to handle that at another shop he decided to help me out and take care of it himself. This RV is my super happy place and it was nice that Michael and the Team at Bear treated it like was their own happy place.&#34; - Heather W. [Yelp ](https://www.yelp.com/biz/bear-collision-and-service-center-hayward-5)">
 
     <link
       rel="stylesheet"
@@ -32,6 +29,7 @@ With BEAR you can rest assured that speed is not prioritized over thoroughness, 
     <link rel="stylesheet" href="/css/swiper-large.css" />
     <link rel="stylesheet" href="/css/logo-flip.css" />
     <link rel="stylesheet" href="/css/site-logo.css" />
+    <link rel="stylesheet" href="/css/insurance.css">
 
     <style>
       nav,
@@ -110,140 +108,120 @@ With BEAR you can rest assured that speed is not prioritized over thoroughness, 
       <main id="main">
         
 
+<link rel="stylesheet" href="/css/insurance.css">
+ <!-- raw HTML omitted -->
+<pre><code>Quality of Workmanship
 
- <h2 id="bear-is-the-optimal-choice-for-insurance-claims-in-auto-body-repair-and">BEAR is the Optimal Choice for Insurance Claims in Auto Body Repair, and</h2>
-<p>This is Why:</p>
-<p>Quality of Workmanship</p>
-<div class="collapsible-container">
-    <div class="collapsible" onclick="this.classList.toggle('active')">
-      <span class="toggle-icon">+</span> Quality of Workmanship
-    </div>
-    <div class="collapsible-content">
-      The <strong>BEAR</strong> team pays meticulous attention to detail, uses high-quality
+
+
+
+
+<div class="collapsible">
+    <span class="toggle-icon">+</span> Quality of Workmanship
+  </div>
+  <div class="collapsible-content">
+    <pre><code>The **BEAR** team pays meticulous attention to detail, uses high-quality
 materials, and adherence to industry standards and manufacturer specifications
 in every repair job. This ensures that the repairs are not only aesthetically
-pleasing but also durable and safe.<br>
-With <strong>BEAR</strong> you can rest assured that speed is not prioritized over
+pleasing but also durable and safe.  
+With **BEAR** you can rest assured that speed is not prioritized over
 thoroughness, which can result in subpar repairs that might not last or meet
 safety standards. Our skilled technicians carefully restore vehicles to their
 pre-accident condition, ensuring structural integrity and visual appeal. This
 includes precise paint matching, proper frame alignment, and using the best
 materials available​.
-    </div>
+</code></pre>
+
   </div>
   
-  <style>
-  .collapsible-container .collapsible {
-    cursor: pointer;
-    padding: 10px;
-    font-size: 18px;
-    display: flex;
-    align-items: center;
-    background-color: #f0f0f0;
-    border: 1px solid #ccc;
-  }
-  
-  .collapsible-container .toggle-icon {
-    font-weight: bold;
-    width: 20px;
-    display: inline-block;
-    text-align: center;
-    margin-right: 10px;
-    transition: transform 0.2s;
-  }
-  
-  .collapsible-container .collapsible-content {
-    padding: 10px;
-    display: none;
-    border: 1px solid #ccc;
-    border-top: none;
-    background-color: #fafafa;
-  }
-  
-  .collapsible-container .collapsible.active + .collapsible-content {
-    display: block;
-  }
-  
-  .collapsible-container .collapsible.active .toggle-icon {
-    content: "−";
-  }
-  </style>
-  
-  <script>
-  document.addEventListener("DOMContentLoaded", function () {
-    const collapsibles = document.querySelectorAll('.collapsible');
-    collapsibles.forEach(function (el) {
-      el.addEventListener('click', function () {
-        const icon = el.querySelector('.toggle-icon');
-        icon.textContent = el.classList.contains('active') ? '−' : '+';
-      });
-    });
-  });
-  </script>
-  
-<p>Training Certifications</p>
-<p><strong>BEAR</strong> is BAR Licensed and I-CAR (Inter-Industry Conference on Auto
+
+
+
+
+
+
+
+
+Training Certifications
+
+
+
+**BEAR** is BAR Licensed and I-CAR (Inter-Industry Conference on Auto
 Collision Repair) certified, which means their technicians have met rigorous
 industry standards for skills and knowledge. Additionally, our technicians are
 trained by PPG, a leading provider of automotive coatings, ensuring precise
 and durable paint jobs. Furthermore, BEAR is OSHA, EPA and DTSC compliant,
 reflecting their commitment to maintaining a safe and healthy work
 environment. These certifications and compliance measures ensure reliable,
-high-quality repairs, making <strong>BEAR</strong> a trustworthy partner for insurance
-companies.</p>
-<p>Warranty on Repairs</p>
-<p><strong>Warranty on Workmanship</strong> : this covers any defects in the work performed,
+high-quality repairs, making **BEAR** a trustworthy partner for insurance
+companies.  
+
+Warranty on Repairs
+
+**Warranty on Workmanship** : this covers any defects in the work performed,
 such as issues with body panel alignment, paint application, or other repair
-processes. If any problems arise from the initial repair work, <strong>BEAR</strong> will
-correct them at no additional cost.<br>
-<strong>Paint Warranty</strong> : covers issues including peeling, cracking, or fading of
+processes. If any problems arise from the initial repair work, **BEAR** will
+correct them at no additional cost.  
+**Paint Warranty** : covers issues including peeling, cracking, or fading of
 the paint to an existing sound surface as long as the vehicle is maintained
-according to the manufacturer&rsquo;s recommendations.<br>
-<strong>Parts Warranty</strong> : OEM and after market parts manufacturer&rsquo;s warranty.<br>
-** Some Exclusions and Conditions may apply</p>
-<p>Facility and Equipment</p>
-<p><strong>BEAR Collision Center</strong> has invested in a well-equipped facility that meets
+according to the manufacturer's recommendations.  
+**Parts Warranty** : OEM and after market parts manufacturer's warranty.  
+** Some Exclusions and Conditions may apply
+
+Facility and Equipment
+
+**BEAR Collision Center** has invested in a well-equipped facility that meets
 the highest standards of the industry. Our frame machines ensuring precise
 alignment and structural integrity of vehicles. Our sand blasting booth allows
 for meticulous surface preparation, enhancing the longevity and quality of
 repairs. Additionally, our large painting and drying booths are designed to
 provide a controlled environment for flawless finishes, reducing the risk of
-contaminants and ensuring a perfect paint job every time.</p>
-<p>Insurance and Legal Compliance</p>
-<p><strong>BEAR</strong> complies to the legal and insurance needs for the state of
+contaminants and ensuring a perfect paint job every time.
+
+Insurance and Legal Compliance
+
+**BEAR** complies to the legal and insurance needs for the state of
 California, including: workers compensation, Commercial property insurance,
 Legal Auto Body business license, Occupational Safety and Health
 Administration (OSHA), Department of Toxic Substance Control (DTSC) and
-Environmental Protection Agency (EPA) compliant.</p>
-<p>Estimating Accuracy</p>
-<p><strong>BEAR Collision Center</strong> writes accurate estimates for insurance companies by
+Environmental Protection Agency (EPA) compliant.
+
+Estimating Accuracy
+
+**BEAR Collision Center** writes accurate estimates for insurance companies by
 utilizing Mitchell Estimating Software, a leading tool in the industry. This
 software is designed to create precise estimates quickly and efficiently,
 integrating features such as VIN scanning, photo integration, and OEM repair
 procedures. These capabilities reduce estimating errors and streamline the
 appraisal process, ensuring that estimates are both comprehensive and
-accurate.</p>
-<p>Turn Around Time</p>
-<p><strong>BEAR</strong> <strong>Collision Center</strong> has a quick turnaround time due to several key
+accurate.
+
+Turn Around Time
+
+**BEAR** **Collision Center** has a quick turnaround time due to several key
 factors. Their Clemco sandblasting booth allows for efficient and thorough
 surface preparation, speeding up the repair process. With over 45 years of
-industry experience, BEAR&rsquo;s seasoned team brings expertise and efficiency to
+industry experience, BEAR's seasoned team brings expertise and efficiency to
 every job. The large facility is equipped with state-of-the-art equipment,
 including advanced paint and drying booths, enabling simultaneous handling of
 multiple vehicles. Their standardized estimating process ensures accurate and
-swift damage assessment, reducing delays. Furthermore, BEAR&rsquo;s strong
+swift damage assessment, reducing delays. Furthermore, BEAR's strong
 relationships with local vendors ensure prompt parts supply, and their
 capability for local sourcing fabrication addresses any part shortages,
 ensuring repairs are never stalled due to unavailable components. This
 combination of experience, facilities, equipment, and processes ensures that
 BEAR Collision Repair can deliver high-quality repairs quickly and
-efficiently.</p>
-<p>Use of OEM parts</p>
-<p>BEAR uses OEM parts when available unless otherwise directed. If the OEM part
-is not available it uses the highest quality after market parts. <strong>BEAR
-Collision Center</strong> is a Dometic authorized dealer.</p>
-<p>Customer Service</p>
-<p><strong>At BEAR Collision Center,</strong> we are committed to providing excellent customer
+efficiently.
+
+Use of OEM parts
+
+BEAR uses OEM parts when available unless otherwise directed. If the OEM part
+is not available it uses the highest quality after market parts. **BEAR
+Collision Center** is a Dometic authorized dealer.
+
+Customer Service
+
+**At BEAR Collision Center,** we are committed to providing excellent customer
 service. Our team prioritizes clear communication, ensuring that clients are
 fully informed at every step of the repair process. Professionalism is at the
 core of our operations, reflected in our courteous staff, timely updates, and
@@ -251,22 +229,30 @@ transparent estimates. We are also highly responsive, addressing inquiries and
 concerns promptly to deliver a seamless experience. By combining these
 elements, BEAR Collision Center not only meets but exceeds the expectations of
 both our customers and insurance partners, fostering trust and long-term
-relationships.</p>
-<p>Reputation and Reviews</p>
-<p><strong>BEAR Collision Center</strong> has earned a excellent reputation in the local
+relationships.
+
+Reputation and Reviews
+
+**BEAR Collision Center** has earned a excellent reputation in the local
 community for its excellent service and quality repairs. Customers
 consistently praise the friendly and professional staff, highlighting their
-ability to handle even the toughest jobs with efficiency and care.</p>
-<p>&ldquo;Outstanding service, very friendly staff and a very tough job done so well.
+ability to handle even the toughest jobs with efficiency and care.  
+
+&quot;Outstanding service, very friendly staff and a very tough job done so well.
 Thank Steve, Patty and Michael . Best RV repair in the world. Thank you. &quot; -
-Mike Barret on [Birdey](<a href="https://reviews.birdeye.com/bear-rv-collision-">https://reviews.birdeye.com/bear-rv-collision-</a>
-center-156069132112032?srid=122233715451224506095)</p>
-<p>&ldquo;Michael went above and beyond to help me with another small issue that they
-usually don&rsquo;t address but since I was having trouble getting appointments to
+Mike Barret on [Birdey](https://reviews.birdeye.com/bear-rv-collision-
+center-156069132112032?srid=122233715451224506095)  
+
+&quot;Michael went above and beyond to help me with another small issue that they
+usually don't address but since I was having trouble getting appointments to
 handle that at another shop he decided to help me out and take care of it
 himself. This RV is my super happy place and it was nice that Michael and the
-Team at Bear treated it like was their own happy place.&rdquo; - Heather W. <a href="https://www.yelp.com/biz/bear-collision-and-service-center-hayward-5">Yelp
-</a></p>
+Team at Bear treated it like was their own happy place.&quot; - Heather W. [Yelp
+](https://www.yelp.com/biz/bear-collision-and-service-center-hayward-5)
+</code></pre>
+<!-- raw HTML omitted -->
+<!-- raw HTML omitted -->
+<!-- raw HTML omitted -->
 
  
 
