--- a/public/rv-repair/index.html
+++ b/public/rv-repair/index.html
@@ -30,6 +30,7 @@ Body Damage From minor bumps to major accidents, our skilled technicians restore
     <link rel="stylesheet" href="/css/swiper-large.css" />
     <link rel="stylesheet" href="/css/logo-flip.css" />
     <link rel="stylesheet" href="/css/site-logo.css" />
+    <link rel="stylesheet" href="/css/insurance.css">
 
     <style>
       nav,
