--- a/public/insurance-partnership/index.html
+++ b/public/insurance-partnership/index.html
@@ -14,10 +14,11 @@
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Insurance Partnerships">
-  <meta name="twitter:description" content="BEAR is the Optimal Choice for Insurance Claims in Auto Body Repair, and This is Why:
-Quality of Workmanship
-&#43; Quality of Workmanship The BEAR team pays meticulous attention to detail, uses high-quality materials, and adherence to industry standards and manufacturer specifications in every repair job. This ensures that the repairs are not only aesthetically pleasing but also durable and safe.
-With BEAR you can rest assured that speed is not prioritized over thoroughness, which can result in subpar repairs that might not last or meet safety standards. Our skilled technicians carefully restore vehicles to their pre-accident condition, ensuring structural integrity and visual appeal. This includes precise paint matching, proper frame alignment, and using the best materials available​. Training Certifications">
+  <meta name="twitter:description" content="BEAR is the Optimal Choice for Insurance Claims in Auto Body Repair, and This is Why: &#43; Quality of Workmanship The BEAR team pays meticulous attention to detail, uses high-quality materials, and adherence to industry standards and manufacturer specifications in every repair job. This ensures that the repairs are not only aesthetically pleasing but also durable and safe.
+With BEAR you can rest assured that speed is not prioritized over thoroughness, which can result in subpar repairs that might not last or meet safety standards. Our skilled technicians carefully restore vehicles to their pre-accident condition, ensuring structural integrity and visual appeal. This includes precise paint matching, proper frame alignment, and using the best materials available​. &#43; Training Certifications BEAR is BAR Licensed and I-CAR (Inter-Industry Conference on Auto Collision Repair) certified, which means their technicians have met rigorous industry standards for skills and knowledge. Additionally, our technicians are trained by PPG, a leading provider of automotive coatings, ensuring precise and durable paint jobs. Furthermore, BEAR is OSHA, EPA and DTSC compliant, reflecting their commitment to maintaining a safe and healthy work environment. These certifications and compliance measures ensure reliable, high-quality repairs, making BEAR a trustworthy partner for insurance companies. &#43; Warranty on Repairs Warranty on Workmanship : this covers any defects in the work performed, such as issues with body panel alignment, paint application, or other repair processes. If any problems arise from the initial repair work, BEAR will correct them at no additional cost.
+Paint Warranty : covers issues including peeling, cracking, or fading of the paint to an existing sound surface as long as the vehicle is maintained according to the manufacturer’s recommendations.
+Parts Warranty : OEM and after market parts manufacturer’s warranty.
+** Some Exclusions and Conditions may apply &#43; Facility and Equipment BEAR Collision Center has invested in a well-equipped facility that meets the highest standards of the industry. Our frame machines ensuring precise alignment and structural integrity of vehicles. Our sand blasting booth allows for meticulous surface preparation, enhancing the longevity and quality of repairs. Additionally, our large painting and drying booths are designed to provide a controlled environment for flawless finishes, reducing the risk of contaminants and ensuring a perfect paint job every time. &#43; Insurance and Legal Compliance BEAR complies to the legal and insurance needs for the state of California, including: workers compensation, Commercial property insurance, Legal Auto Body business license, Occupational Safety and Health Administration (OSHA), Department of Toxic Substance Control (DTSC) and Environmental Protection Agency (EPA) compliant. &#43; Estimating Accuracy BEAR Collision Center writes accurate estimates for insurance companies by utilizing Mitchell Estimating Software, a leading tool in the industry. This software is designed to create precise estimates quickly and efficiently, integrating features such as VIN scanning, photo integration, and OEM repair procedures. These capabilities reduce estimating errors and streamline the appraisal process, ensuring that estimates are both comprehensive and accurate. &#43; Turn Around Time BEAR Collision Center has a quick turnaround time due to several key factors. Their Clemco sandblasting booth allows for efficient and thorough surface preparation, speeding up the repair process. With over 45 years of industry experience, BEAR’s seasoned team brings expertise and efficiency to every job. The large facility is equipped with state-of-the-art equipment, including advanced paint and drying booths, enabling simultaneous handling of multiple vehicles. Their standardized estimating process ensures accurate and swift damage assessment, reducing delays. Furthermore, BEAR’s strong relationships with local vendors ensure prompt parts supply, and their capability for local sourcing fabrication addresses any part shortages, ensuring repairs are never stalled due to unavailable components. This combination of experience, facilities, equipment, and processes ensures that BEAR Collision Repair can deliver high-quality repairs quickly and efficiently. &#43; Use of OEM parts BEAR uses OEM parts when available unless otherwise directed. If the OEM part is not available it uses the highest quality after market parts. BEAR Collision Center is a Dometic authorized dealer. &#43; Customer Service At BEAR Collision Center, we are committed to providing excellent customer service. Our team prioritizes clear communication, ensuring that clients are fully informed at every step of the repair process. Professionalism is at the core of our operations, reflected in our courteous staff, timely updates, and transparent estimates. We are also highly responsive, addressing inquiries and concerns promptly to deliver a seamless experience. By combining these elements, BEAR Collision Center not only meets but exceeds the expectations of both our customers and insurance partners, fostering trust and long-term relationships. &#43; Reputation and Reviews BEAR Collision Center has earned a excellent reputation in the local community for its excellent service and quality repairs. Customers consistently praise the friendly and professional staff, highlighting their ability to handle even the toughest jobs with efficiency and care.">
 
     <link
       rel="stylesheet"
@@ -113,9 +114,7 @@ With BEAR you can rest assured that speed is not prioritized over thoroughness, 
 
 
 <div class="custom-background">
-  <h2 id="bear-is-the-optimal-choice-for-insurance-claims-in-auto-body-repair-and">BEAR is the Optimal Choice for Insurance Claims in Auto Body Repair, and</h2>
-<p>This is Why:</p>
-<p>Quality of Workmanship</p>
+  <h2 id="bear-is-the-optimal-choice-for-insurance-claims-in-auto-body-repair-and-this-is-why">BEAR is the Optimal Choice for Insurance Claims in Auto Body Repair, and This is Why:</h2>
 <div class="collapsible">
     <span class="toggle-icon">+</span> Quality of Workmanship
 </div>
@@ -133,8 +132,12 @@ includes precise paint matching, proper frame alignment, and using the best
 materials available​.
 </div>
   
-<p>Training Certifications</p>
-<p><strong>BEAR</strong> is BAR Licensed and I-CAR (Inter-Industry Conference on Auto
+<div class="collapsible">
+    <span class="toggle-icon">+</span> Training Certifications
+</div>
+
+<div class="collapsible-content">
+    <strong>BEAR</strong> is BAR Licensed and I-CAR (Inter-Industry Conference on Auto
 Collision Repair) certified, which means their technicians have met rigorous
 industry standards for skills and knowledge. Additionally, our technicians are
 trained by PPG, a leading provider of automotive coatings, ensuring precise
@@ -142,9 +145,15 @@ and durable paint jobs. Furthermore, BEAR is OSHA, EPA and DTSC compliant,
 reflecting their commitment to maintaining a safe and healthy work
 environment. These certifications and compliance measures ensure reliable,
 high-quality repairs, making <strong>BEAR</strong> a trustworthy partner for insurance
-companies.</p>
-<p>Warranty on Repairs</p>
-<p><strong>Warranty on Workmanship</strong> : this covers any defects in the work performed,
+companies.
+</div>
+  
+<div class="collapsible">
+    <span class="toggle-icon">+</span> Warranty on Repairs
+</div>
+
+<div class="collapsible-content">
+    <strong>Warranty on Workmanship</strong> : this covers any defects in the work performed,
 such as issues with body panel alignment, paint application, or other repair
 processes. If any problems arise from the initial repair work, <strong>BEAR</strong> will
 correct them at no additional cost.<br>
@@ -152,31 +161,55 @@ correct them at no additional cost.<br>
 the paint to an existing sound surface as long as the vehicle is maintained
 according to the manufacturer&rsquo;s recommendations.<br>
 <strong>Parts Warranty</strong> : OEM and after market parts manufacturer&rsquo;s warranty.<br>
-** Some Exclusions and Conditions may apply</p>
-<p>Facility and Equipment</p>
-<p><strong>BEAR Collision Center</strong> has invested in a well-equipped facility that meets
+** Some Exclusions and Conditions may apply
+</div>
+  
+<div class="collapsible">
+    <span class="toggle-icon">+</span> Facility and Equipment
+</div>
+
+<div class="collapsible-content">
+    <strong>BEAR Collision Center</strong> has invested in a well-equipped facility that meets
 the highest standards of the industry. Our frame machines ensuring precise
 alignment and structural integrity of vehicles. Our sand blasting booth allows
 for meticulous surface preparation, enhancing the longevity and quality of
 repairs. Additionally, our large painting and drying booths are designed to
 provide a controlled environment for flawless finishes, reducing the risk of
-contaminants and ensuring a perfect paint job every time.</p>
-<p>Insurance and Legal Compliance</p>
-<p><strong>BEAR</strong> complies to the legal and insurance needs for the state of
+contaminants and ensuring a perfect paint job every time.
+</div>
+  
+<div class="collapsible">
+    <span class="toggle-icon">+</span> Insurance and Legal Compliance
+</div>
+
+<div class="collapsible-content">
+    <strong>BEAR</strong> complies to the legal and insurance needs for the state of
 California, including: workers compensation, Commercial property insurance,
 Legal Auto Body business license, Occupational Safety and Health
 Administration (OSHA), Department of Toxic Substance Control (DTSC) and
-Environmental Protection Agency (EPA) compliant.</p>
-<p>Estimating Accuracy</p>
-<p><strong>BEAR Collision Center</strong> writes accurate estimates for insurance companies by
+Environmental Protection Agency (EPA) compliant.
+</div>
+  
+<div class="collapsible">
+    <span class="toggle-icon">+</span> Estimating Accuracy
+</div>
+
+<div class="collapsible-content">
+    <strong>BEAR Collision Center</strong> writes accurate estimates for insurance companies by
 utilizing Mitchell Estimating Software, a leading tool in the industry. This
 software is designed to create precise estimates quickly and efficiently,
 integrating features such as VIN scanning, photo integration, and OEM repair
 procedures. These capabilities reduce estimating errors and streamline the
 appraisal process, ensuring that estimates are both comprehensive and
-accurate.</p>
-<p>Turn Around Time</p>
-<p><strong>BEAR</strong> <strong>Collision Center</strong> has a quick turnaround time due to several key
+accurate.
+</div>
+  
+<div class="collapsible">
+    <span class="toggle-icon">+</span> Turn Around Time
+</div>
+
+<div class="collapsible-content">
+    <strong>BEAR</strong> <strong>Collision Center</strong> has a quick turnaround time due to several key
 factors. Their Clemco sandblasting booth allows for efficient and thorough
 surface preparation, speeding up the repair process. With over 45 years of
 industry experience, BEAR&rsquo;s seasoned team brings expertise and efficiency to
@@ -189,13 +222,25 @@ capability for local sourcing fabrication addresses any part shortages,
 ensuring repairs are never stalled due to unavailable components. This
 combination of experience, facilities, equipment, and processes ensures that
 BEAR Collision Repair can deliver high-quality repairs quickly and
-efficiently.</p>
-<p>Use of OEM parts</p>
-<p>BEAR uses OEM parts when available unless otherwise directed. If the OEM part
+efficiently.
+</div>
+  
+<div class="collapsible">
+    <span class="toggle-icon">+</span> Use of OEM parts
+</div>
+
+<div class="collapsible-content">
+    BEAR uses OEM parts when available unless otherwise directed. If the OEM part
 is not available it uses the highest quality after market parts. <strong>BEAR
-Collision Center</strong> is a Dometic authorized dealer.</p>
-<p>Customer Service</p>
-<p><strong>At BEAR Collision Center,</strong> we are committed to providing excellent customer
+Collision Center</strong> is a Dometic authorized dealer.
+</div>
+  
+<div class="collapsible">
+    <span class="toggle-icon">+</span> Customer Service
+</div>
+
+<div class="collapsible-content">
+    <strong>At BEAR Collision Center,</strong> we are committed to providing excellent customer
 service. Our team prioritizes clear communication, ensuring that clients are
 fully informed at every step of the repair process. Professionalism is at the
 core of our operations, reflected in our courteous staff, timely updates, and
@@ -203,9 +248,15 @@ transparent estimates. We are also highly responsive, addressing inquiries and
 concerns promptly to deliver a seamless experience. By combining these
 elements, BEAR Collision Center not only meets but exceeds the expectations of
 both our customers and insurance partners, fostering trust and long-term
-relationships.</p>
-<p>Reputation and Reviews</p>
-<p><strong>BEAR Collision Center</strong> has earned a excellent reputation in the local
+relationships.
+</div>
+  
+<div class="collapsible">
+    <span class="toggle-icon">+</span> Reputation and Reviews
+</div>
+
+<div class="collapsible-content">
+    <p><strong>BEAR Collision Center</strong> has earned a excellent reputation in the local
 community for its excellent service and quality repairs. Customers
 consistently praise the friendly and professional staff, highlighting their
 ability to handle even the toughest jobs with efficiency and care.</p>
@@ -219,6 +270,9 @@ handle that at another shop he decided to help me out and take care of it
 himself. This RV is my super happy place and it was nice that Michael and the
 Team at Bear treated it like was their own happy place.&rdquo; - Heather W. <a href="https://www.yelp.com/biz/bear-collision-and-service-center-hayward-5">Yelp
 </a></p>
+
+</div>
+  
 
 </div>
 
